# Mobile-Robot-Control

5_final_challenge/: CMakeLists.txt  pseudo_main.cpp
5_final_challenge/config/: RestaurantChallengeConfig.json  RestaurantChallengeConfigVar1.json  RestaurantChallengeConfigVar2.json  config_map_compare.json  params_RestaurantChallenge.json  params_map_compare_PRM.json
5_final_challenge/include/: tools.h
5_final_challenge/include/PRM/: prm.h
5_final_challenge/include/Planner/: Pos.h  VFH.h  planning.h
5_final_challenge/maps/: RestaurantChallengeMap.yaml  RestaurantChallengeMap2024.json  RestaurantChallengeMap2024.yaml  RestaurantChallengeMap2024Config.json  RestaurantChallengeMapVar1.yaml  RestaurantChallengeMapVar2.yaml
5_final_challenge/src/: Local_Nav.cpp  main.cpp  tools.cpp
5_final_challenge/src/PRM/: prm.cpp
5_final_challenge/src/Planner/: Pos.cpp  VFH.cpp  planning.cpp
Week_1/: CMakeLists.txt
Week_1/src/: hello.cpp
Week_2/local_global/: CMakeLists.txt
Week_2/local_global/config/: params_autonomous_maze.json
Week_2/local_global/maps/: metadata_maze_auto.yaml
Week_2/local_global/src/: tools.cpp
Week_2/local_global/src/Planner/: planning.cpp
Week_2/mrc-navigation-assignment-1-main/src/Planner/: planning.cpp
Week_2/try/: CMakeLists.txt
Week_2/try/src/: assig2.cpp  try1.cpp
Week_3/Localization_assig1/: CMakeLists.txt
Week_3/Localization_assig1/src/: hello.cpp
ultron-main/: .gitignore  CMakeLists.txt  README.md
ultron-main/Final/: CMakeLists.txt  ram.h
ultron-main/Final/config/: config_restaurant_map.json
ultron-main/Final/include/: APF.h  DataTypes.h  ParticleFilter.h  tools.h
ultron-main/Final/include/objects/: Grid.h  Robot.h
ultron-main/Final/map/: final.json  final.yaml  og_map.json
ultron-main/Final/src/: APF.cpp  A_star.h  ParticleFilter.cpp  bresanham.h  geometric_primitives.h  json_restaurant.cpp  kalman_filter.cpp  main.cpp  map.json  map_visualization.h  open_space.h  path.cpp  tools.cpp
ultron-main/Final/src/Particle_filter/: Localization.h
ultron-main/Final/src/objects/: Grid.cpp  Robot.cpp
ultron-main/include/: sample.h
ultron-main/src/: main.cpp  sample.cpp
week3-simpleObjectAvoidence/src/: hello_work.cpp  utilis.h
